--- a/Poseidon-AngularFront/src/app/rating/rating-add/rating-add.component.html
+++ b/Poseidon-AngularFront/src/app/rating/rating-add/rating-add.component.html
@@ -11,7 +11,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>S&P Rating</mat-label>
-        <input [(ngModel)]="newRating.sAndPRating" matInput name="newRating.sAndPRating">
+        <input [(ngModel)]="newRating.sandPRating" matInput name="newRating.sandPRating">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Fitch Rating</mat-label>
