--- a/Poseidon-AngularFront/src/app/rating/rating-list/rating-list.component.html
+++ b/Poseidon-AngularFront/src/app/rating/rating-list/rating-list.component.html
@@ -19,7 +19,7 @@
         <tr *ngFor="let rating of ratingList">
           <th scope="row">{{ rating.id }}</th>
           <td>{{ rating.moodysRating }}</td>
-          <td>{{ rating.sAndPRating }}</td>
+          <td>{{ rating.sandPRating }}</td>
           <td>{{ rating.fitchRating }}</td>
           <td>{{ rating.orderNumber | number }}</td>
           <td>
