--- a/Poseidon-AngularFront/src/app/rating/rating-update/rating-update.component.html
+++ b/Poseidon-AngularFront/src/app/rating/rating-update/rating-update.component.html
@@ -14,7 +14,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>S&P Rating</mat-label>
-        <input [(ngModel)]="updateRating.sAndPRating" matInput name="updateRating.sAndPRating">
+        <input [(ngModel)]="updateRating.sandPRating" matInput name="updateRating.sandPRating">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Fitch Rating</mat-label>
