front input change

--- a/Poseidon-AngularFront/src/app/user/user-add/user-add.component.html
+++ b/Poseidon-AngularFront/src/app/user/user-add/user-add.component.html
@@ -15,13 +15,13 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Role</mat-label>
-        <input [(ngModel)]="newUser.role" type="number" matInput name="newUser.role">
+        <input [(ngModel)]="newUser.role" matInput name="newUser.role">
       </mat-form-field>
       <div class="buttonGroup">
         <button mat-raised-button color="warn" type="button" [routerLink]="['../']">Back</button>
         <button mat-raised-button color="primary" type="submit">Add</button>
       </div>
     </form>
-    
+
   </mat-card-content>
 </mat-card>
